# Student-Record-System

./: CMakeLists.txt  Linkedlist.c  Linkedlist.h  README.md  main.c  privilage.c  privilege.h  structstudent.h  system_interface  system_interface.c  system_interface.h
